# cc2530-zstack-sample-cmake

./: CMakeLists.txt  README.md  build.sh  iar-toolchain.cmake
CC2530DB/: GenericApp.dep
CC2530DB/settings/: GenericApp.CHDTECH_DEV.cspy.bat  GenericApp.CHDTECH_DEV.cspy.ps1  GenericApp.CHDTECH_DEV.driver.xcl  GenericApp.CHDTECH_DEV.general.xcl  GenericApp.DIYRuZ_Flower.cspy.bat  GenericApp.DIYRuZ_Flower.cspy.ps1  GenericApp.DIYRuZ_Flower.driver.xcl  GenericApp.DIYRuZ_Flower.general.xcl  GenericApp.wsdt
src/: version.c
